# Live2Desktop

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_zh_CN.md  TODO  generateQRC.py  get_model.sh  icon.rc  resources.qrc
Core/include/: Live2DCubismCore.h
Core/lib/: README.txt
Framework/: AppOpenGLWrapper.cpp  AppOpenGLWrapper.hpp  CMakeLists.txt
Framework/Motion/: CMakeLists.txt
Framework/Rendering/: CubismRenderer.cpp
Framework/Rendering/D3D11/: CubismNativeInclude_D3D11.hpp  CubismOffscreenSurface_D3D11.cpp  CubismOffscreenSurface_D3D11.hpp  CubismRenderState_D3D11.cpp  CubismRenderState_D3D11.hpp  CubismRenderer_D3D11.cpp  CubismRenderer_D3D11.hpp  CubismShader_D3D11.cpp  CubismShader_D3D11.hpp  CubismType_D3D11.hpp
Framework/Rendering/D3D9/: CubismNativeInclude_D3D9.hpp  CubismOffscreenSurface_D3D9.cpp  CubismOffscreenSurface_D3D9.hpp  CubismRenderState_D3D9.cpp  CubismRenderState_D3D9.hpp  CubismRenderer_D3D9.cpp  CubismRenderer_D3D9.hpp  CubismShader_D3D9.cpp  CubismShader_D3D9.hpp  CubismType_D3D9.hpp
Framework/Rendering/OpenGL/: CubismOffscreenSurface_OpenGLES2.cpp  CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp  CubismShader_OpenGLES2.cpp  CubismShader_OpenGLES2.hpp
Framework/Utils/: CubismJson.hpp
Resources/: config.json
Resources/Hiyori/: Hiyori.model3.json
cmake/: unix.cmake  win.cmake
config/: mcp_config.json  module_config.json
misc/: Live2Desktop.desktop
misc/qss/: style.qss
rawResources/qss/: style.qss
src/: allocator.cpp  allocator.h  animeWidget.cpp  animeWidget.h  configDialog.cpp  configDialog.h  consts.h  coreManager.cpp  coreManager.h  eventHandler.cpp  eventHandler.h  logger.cpp  logger.h  main.cpp  mainWindow.cpp  mainWindow.h  model.cpp  model.h  modelManager.cpp  modelManager.h  modelParameters.cpp  modelParameters.h  renderer.cpp  renderer.h  resourceLoader.cpp  resourceLoader.h  textureManager.cpp  textureManager.h  tools.cpp  tools.h  wavFileHandler.cpp  wavFileHandler.h
src/config/: mcp_config.cpp  mcp_config.h  module_config.cpp  module_config.h
src/drivers/: allocator.cpp  allocator.h  coreManager.cpp  coreManager.h  eventHandler.cpp  eventHandler.h  model.cpp  model.h  modelManager.cpp  modelManager.h  modelParameters.cpp  modelParameters.h  renderer.cpp  resourceLoader.cpp  resourceLoader.h  textureManager.cpp  textureManager.h  tools.cpp  tools.h  wavFileHandler.cpp  wavFileHandler.h
src/gui/: animeWidget.cpp  animeWidget.h  chatBox.cpp  chatBox.h  configDialog.cpp  configDialog.h  mainWindow.cpp  mainWindow.h  messagebubble.cpp  messagebubble.h  popup.cpp  popup.h
src/modules/audio/: CMakeLists.txt  audio_handler.cpp  audio_handler.h  audio_recorder.cpp  audio_recorder.h
src/modules/chat/: CMakeLists.txt  client.cpp  client.h  openai_client.cpp  openai_client.h  server.cpp  server.h
src/modules/chat/gui/: chatBox.cpp  chatBox.h  popup.cpp  popup.h
src/modules/hotkey/: CMakeLists.txt  shortcut_handler.cpp  shortcut_handler.h
src/modules/hotkey/platform/: hotkey_linux.h  hotkey_win.h
src/modules/stt/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h  server_main.cpp
src/modules/tts/: CMakeLists.txt  client.cpp  client.h
src/network/: downloader.cpp  downloader.h
src/utils/: CMakeLists.txt  cleaner.cpp  cleaner.hpp  consts.h  logger.cpp  logger.h
test/: CMakeLists.txt
test/drivers/: test_wavfilehandler.cpp
test/gui/: test_chatbox.cpp
test/modules/: moc_server.cpp  test_chatclient.cpp  test_chatclient.h  test_hotkey.cpp  test_mcpconfig.cpp  test_moduleconfig.cpp  test_stt.cpp  test_stt.h
ui/: chatBox.ui  configDialog.ui  mainWindow.ui  popup.ui
